tests/baselines/reference/typeParameterHasSelfAsConstraint.errors.txt
tests/cases/compiler/typeParameterHasSelfAsConstraint.ts(1,24): error TS2313: Type parameter 'T' has a circular constraint.
tests/cases/compiler/typeParameterHasSelfAsConstraint.ts(2,5): error TS2322: Type 'T' is not assignable to type 'number'.


==== tests/cases/compiler/typeParameterHasSelfAsConstraint.ts (2 errors) ====
    function foo<T extends T>(x: T): number {
                           ~
!!! error TS2313: Type parameter 'T' has a circular constraint.
        return x;
        ~~~~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'number'.
    }
     
    